# aiogramproject1

./: .gitignore  TODO.md  main.py  pyproject.toml
app/api/crud/: __init__.py  crud.py
app/api/markups/: __init__.py  account_kb.py  main_kb.py
app/api/routers/: __init__.py
app/api/routers/callbacks/: __init__.py  main_callback_handlers.py  profile_callback_handlers.py  questionary_cb_handler.py
app/api/routers/commands/: __init__.py  main_commands.py
app/core/: __init__.py  config.py
app/core/middlewares/: session_middleware.py
app/core/models/: __init__.py  association_tables.py  author.py  base.py  book.py  db_helper.py  examples  user.py  user_book_association.py
app/core/orm/: author_shemas.py  book_shemas.py  orm.py  user_shemas.py
app/core/schemas/: author_schemas.py  book_schemas.py  user_schemas.py
app/tests/: test_crud.py
app/tests/crud/: test_book_crud.py  test_user_crud.py
app/utils/: __init__.py  ai_helper.py  choice_helper.py  data_analitic.py  lexicon.py  logging.py  states.py
app/utils/requests/: __init__.py  ai_helper.py  google_api.py
