[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
aiogram = "^3.6.0"
pydantic-settings = "^2.2.1"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.30"}
aiosqlite = "^0.20.0"
authlib = {extras = ["client"], version = "^1.3.0"}
requests = "^2.32.3"
alembic = "^1.13.1"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"

